[project]
name = "trustyai-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "uv",
    "micropipenv[toml]",

    "feast",

    # PyTorch packages
    "torch; platform_machine != 'ppc64le' and platform_machine != 's390x'",

    # Triton here is a dependency of torch, and is just being
    # explicitly re-declared so that the index to pull it from can be
    # customized. Although torch was being pulled from the PyTorch
    # index, all of its dependencies are still defaulting to coming
    # from PyPI (or whatever default index is used for a build). In
    # the triton case, PyPI only has x86_64 wheels for this version,
    # but the PyTorch index has both x86_64 and aarch64 wheels,
    # matching the arches that are available for torch.
    #
    # Since it's a dependency of torch, I've also added same platform
    # exclusion marker to omit for ppc64le.
    "triton; platform_machine != 'ppc64le' and platform_machine != 's390x'",

    # TrustyAI packages
    # More information available at:
    #   - https://pypi.org/project/trustyai/
    #   - https://github.com/trustyai-explainability/trustyai-explainability-python/blob/main/requirements.txt
    "transformers",
    "datasets",
    "accelerate; platform_machine != 'ppc64le' and platform_machine != 's390x'",
    "trustyai",

    # Datascience and useful extensions
    "codeflare-sdk; platform_machine != 'ppc64le' and platform_machine != 's390x'",
    "skl2onnx",
    "odh-notebooks-meta-workbench-datascience-deps",

    "odh-notebooks-meta-db-connectors-deps",
    "odh-notebooks-meta-jupyterlab-deps",
    "odh-notebooks-meta-jupyterlab-datascience-deps",

    # Base packages
    "wheel",
    "setuptools",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
override-dependencies = [
    # RHAIENG-2458: CVE-2025-66418 urllib3 - override needed because odh-elyra pulls in
    # appengine-python-standard which has an obnoxious urllib3<2 constraint
    "urllib3>=2.6.0",
    # AIPCC-13675: protobuf 6.33.6+ UPB C extension segfaults on s390x
    "protobuf==6.31.1",
    # AIPCC-8698: python-lsp-server[all] has conflicting pyflakes/pycodestyle requirements
    # Using >= instead of ~= to allow broader compatibility during resolution
    # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
    "python-lsp-server>=1.11.0",
    "pandas>=3.0.1",
]

[tool.uv.sources]
odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
odh-notebooks-meta-db-connectors-deps = { path = "../../../dependencies/odh-notebooks-meta-db-connectors-deps" }
odh-notebooks-meta-jupyterlab-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-deps" }
odh-notebooks-meta-jupyterlab-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-datascience-deps" }
