[project]
name = "trustyai-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # PyTorch packages
    "torch==2.7.1+cu128; platform_machine != 'ppc64le'",

    # Triton here is a dependency of torch, and is just being
    # explicitly re-declared so that the index to pull it from can be
    # customized. Although torch was being pulled from the PyTorch
    # index, all of its dependencies are still defaulting to coming
    # from PyPI (or whatever default index is used for a build). In
    # the triton case, PyPI only has x86_64 wheels for this version,
    # but the PyTorch index has both x86_64 and aarch64 wheels,
    # matching the arches that are available for torch.
    #
    # Since it's a dependency of torch, I've also added same platform
    # exclusion marker to omit for ppc64le.
    "triton==3.3.1; platform_machine != 'ppc64le'",

    # TrustyAI packages
    # More information available at:
    #   - https://pypi.org/project/trustyai/
    #   - https://github.com/trustyai-explainability/trustyai-explainability-python/blob/main/requirements.txt
    "transformers~=4.56.1",
    "datasets~=4.0.0",
    "accelerate~=1.10.1; platform_machine != 'ppc64le'",
    "trustyai~=0.6.2",
    # Datascience and useful extensions
    "boto3~=1.40.27",
    "kafka-python-ng~=2.2.3",
    "kfp~=2.14.3",
    "matplotlib~=3.10.6", # Should be pinned down to this version in order to be compatible with trustyai
    "numpy~=1.26.4", # Should be pinned down to this version in order to be compatible with trustyai
    "pandas~=1.5.3", # Should be pinned down to this version in order to be compatible with trustyai
    "plotly~=6.3.0",
    "scikit-learn~=1.7.2", # Should be pinned down to this version in order to be compatible with trustyai
    "scipy~=1.16.1",
    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.16.0",  # ONNX 1.21+ (skl2onnx); was ~=1.13.0
    "onnx>=1.21.0; platform_machine != 's390x'",  # CVE-2026-28500
    "codeflare-sdk~=0.31.2; platform_machine != 'ppc64le'",
    "kubeflow-training==1.9.3",

    # DB connectors
    "pymongo~=4.14.1",
    "psycopg~=3.2.10",
    "pyodbc~=5.2.0",
    "mysql-connector-python~=9.4.0",

    # JupyterLab packages
    "odh-elyra==4.2.4",
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.4.7",
    "jupyter-bokeh~=3.0.5", # trustyai 0.6.1 depends on jupyter-bokeh~=3.0.5
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "jupyterlab-lsp~=5.1.1",
    "jupyterlab-widgets~=3.0.15",
    "jupyter-resource-usage~=1.1.1",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
# RHAIENG-5986: pandas 1.5.3 setup.py imports pkg_resources but does not declare
# setuptools as a PEP 517 build dependency. uv reads this from pyproject.toml even
# when installing locked requirements via `uv pip install --requirements=pylock.toml`.
extra-build-dependencies = { pandas = ["setuptools>=80.9.0,<82", "wheel"] }
override-dependencies = [
    # RHAIENG-3211: CVE-2026-26007 cryptography Subgroup Attack
    "cryptography>=46.0.5",
    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
    # Upstream: https://github.com/elyra-ai/elyra/issues/3325
    "urllib3>=2.6.0",
    # RHAIENG-3209: CVE-2026-25990  Pillow: Out-of-bounds Write
    # Upstream: https://github.com/vllm-project/llm-compressor/releases/tag/0.7.1.1
    "pillow>=12.1.1",
    # RHOAIENG-53183: CVE-2026-32274 Black: Arbitrary file writes from unsanitized user input in cache file name
    "black>=26.3.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
triton = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
